--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <h3><b>EDUCATION:</b></h3>
         <h4>
-            10th Board: 93.8% <br>
-            11th Board: 93.8% <br>
+            10th St.John's Parish School  ICSE Board: 90.5% <br>
+            12th Sri Chaitanya Junior College  State Board: 93.8% <br>
             B.Tech in Computer Science and Engineering (Specialization in AI & ML) <br>
             Anil Neerukonda Institute of Technology and Sciences, Current CGPA: 8.84
         </h4>
