--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h3><b>PROJECTS:</b></h3>
         <h4>
             <b>Stock Price Prediction using Machine Learning:</b> Developed a machine learning model to predict stock prices using time series data and regression algorithms. <br>
-            <b>Personal Website:</b> Designed and developed a personal website using HTML, CSS, and JavaScript, integrating dynamic content and interactive features.
+            <b>Academic Transcript Website:</b> Designed and developed a academic transcript website using HTML, CSS, and JavaScript, integrating dynamic content and interactive features.
         </h4>
     </div>
 </body>
